# datus-db-adapters

./: README.md  pyproject.toml
.github/workflows/: package-release-readiness.yml  prepare-package-release-pr.yml  publish-package-release.yml  test.yml
ci/: check_package_release_readiness.py  package_release.py  prepare_package_release.py  required-checks.md  run-integration-tests.sh  run-unit-tests.sh
datus-clickhouse/: docker-compose.yml  pyproject.toml
datus-clickhouse/tests/integration/: test_contract.py
datus-clickzetta/: pyproject.toml
datus-db-core/: pyproject.toml
datus-db-core/datus_db_core/: base.py
datus-db-core/datus_db_core/testing/: contract.py
datus-db-core/tests/unit/: test_base.py
datus-greenplum/: README.md  docker-compose.yml  pyproject.toml
datus-greenplum/datus_greenplum/: connector.py
datus-greenplum/tests/integration/: test_contract.py  test_sql_execution.py
datus-greenplum/tests/unit/: test_connector_unit.py
datus-hive/: docker-compose.yml  pyproject.toml
datus-hive/tests/integration/: test_contract.py
datus-mysql/: docker-compose.yml  pyproject.toml
datus-mysql/tests/integration/: test_contract.py
datus-oceanbase-oracle/: README.md  pyproject.toml
datus-oceanbase-oracle/datus_oceanbase_oracle/: __init__.py  config.py  connector.py
datus-oceanbase-oracle/tests/unit/: test_config.py  test_connector_unit.py
datus-oracle/: README.md  pyproject.toml
datus-oracle/datus_oracle/: __init__.py  config.py  connector.py  handlers.py
datus-oracle/tests/integration/: conftest.py  test_connection.py
datus-oracle/tests/unit/: test_config.py  test_connector_unit.py  test_handlers.py
datus-postgresql/: docker-compose.yml  pyproject.toml
datus-postgresql/datus_postgresql/: connector.py
datus-postgresql/tests/integration/: test_contract.py
datus-postgresql/tests/unit/: test_connector_unit.py
datus-redshift/: pyproject.toml
datus-snowflake/: README.md  pyproject.toml
datus-snowflake/datus_snowflake/: __init__.py  config.py  connector.py
datus-snowflake/tests/: test_config.py  test_connector.py  test_key_pair_auth.py  test_namespace.py
datus-spark/: docker-compose.yml  pyproject.toml
datus-spark/tests/integration/: test_contract.py
datus-sqlalchemy/: pyproject.toml
datus-sqlalchemy/tests/unit/: test_connector_unit.py
datus-starrocks/: README.md  docker-compose.yml  pyproject.toml
datus-starrocks/datus_starrocks/: connector.py
datus-starrocks/scripts/: init_tpch_data.py  test.sh  wait_for_starrocks.py
datus-starrocks/tests/integration/: conftest.py  test_contract.py
datus-starrocks/tests/unit/: test_connector_unit.py
datus-trino/: docker-compose.yml  pyproject.toml
datus-trino/tests/integration/: test_contract.py
docs/superpowers/plans/: 2026-06-03-oracle-adapter.md
