# This is a workspace configuration for development only.
# End users should install individual adapter packages:
#   pip install datus-mysql
#   pip install datus-snowflake
# etc.

[project]
name = "datus-db-adapters"
version = "0.1.0"
description = "Datus database adapters workspace (development only)"
requires-python = ">=3.12"
license = {file = "LICENSE"}

[tool.uv.workspace]
members = ["datus-db-core", "datus-mysql", "datus-postgresql", "datus-sqlalchemy", "datus-starrocks", "datus-snowflake", "datus-clickzetta", "datus-clickhouse", "datus-hive", "datus-redshift", "datus-spark", "datus-trino", "datus-greenplum", "datus-oracle"]

[dependency-groups]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff==0.15.6",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]

# Ruff
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
# Compatible with black defaults

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "B", # flake8-bugbear
    "I", # isort
    "C90", # mccabe complexity
    "T20", # flake8-print (enforce "no print()" guardrail)
]
ignore = [
    "E203", # whitespace before ':'
    "E266", # too many leading '#' for block comment
    "E501", # line too long (handled by formatter)
    # TODO: enable these rules incrementally in follow-up PRs
    "C901", # function too complex (218 existing violations)
    "B904", # raise without from inside except (22 existing violations)
    "B905", # zip without explicit strict (21 existing violations)
    "B027", # empty method without abstract decorator
    "B007", # unused loop control variable
    "B019", # cached instance method
    "B024", # abstract base class without abstract method
    "T201", # print found (63 existing violations, clean up incrementally)
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["datus_db_core", "datus_sqlalchemy", "datus_mysql", "datus_postgresql", "datus_redshift", "datus_snowflake", "datus_clickhouse", "datus_clickzetta", "datus_starrocks", "datus_trino", "datus_spark", "datus_hive", "datus_greenplum", "datus_oracle"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["datus_db_core", "datus_sqlalchemy", "datus_mysql", "datus_postgresql", "datus_redshift", "datus_snowflake", "datus_clickhouse", "datus_clickzetta", "datus_starrocks", "datus_trino", "datus_spark", "datus_hive", "datus_greenplum", "datus_oracle"]
