[project]
name = "datus-db-core"
version = "0.1.4"
description = "Core database abstractions for Datus adapters"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "DatusAI", email = "support@datus.ai"}
]
keywords = ["datus", "database", "adapter", "core"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "sqlglot>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/Datus-ai/datus-db-adapters"
Repository = "https://github.com/Datus-ai/datus-db-adapters"
Issues = "https://github.com/Datus-ai/datus-db-adapters/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_db_core"]
