[project]
name = "datus-oceanbase-oracle"
version = "0.1.0"
description = "OceanBase Oracle mode database adapter for Datus"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "DatusAI", email = "support@datus.ai"}
]
keywords = ["datus", "database", "oceanbase", "oracle", "adapter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "datus-db-core>=0.1.4",
    "DBUtils>=3.0.0",
    "JayDeBeApi>=1.2.3",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Datus-ai/datus-db-adapters"
Repository = "https://github.com/Datus-ai/datus-db-adapters"
Issues = "https://github.com/Datus-ai/datus-db-adapters/issues"

[project.entry-points."datus.adapters"]
oceanbase-oracle = "datus_oceanbase_oracle:register"

[tool.uv.sources]
datus-db-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_oceanbase_oracle"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "acceptance: marks tests as acceptance tests for CI/CD (core functionality validation)",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["datus_oceanbase_oracle"]
omit = ["tests/*", "**/__init__.py"]
