[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-redshift"
version = "0.1.3"
description = "Amazon Redshift adapter for Datus Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Datus Team"}
]

dependencies = [
    "datus-db-core>=0.1.3",
    "redshift_connector>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points."datus.adapters"]
redshift = "datus_redshift:register"

[tool.uv.sources]
datus-db-core = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["datus_redshift"]
