[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datus-snowflake"
version = "0.1.5"
description = "Snowflake adapter for Datus Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "DatusAI", email = "support@datus.ai"}
]
dependencies = [
    "cryptography>=41.0.0",
    "datus-db-core>=0.1.3",
    "snowflake-connector-python>=3.6.0",
    "pandas>=2.1.2,<2.2.0",
    "pyarrow>=14.0.1",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.entry-points."datus.adapters"]
snowflake = "datus_snowflake:register"

[tool.uv.sources]
datus-db-core = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.build.targets.wheel]
packages = ["datus_snowflake"]
